css/styles.css
/***********************
    General Styles
************************/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    -webkit-margin-before: 0px;
    -webkit-margin-after: 0px;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
    -webkit-padding-before: 0px;
    -webkit-padding-after: 0px;
    -webkit-padding-start: 0px;
    -webkit-padding-end: 0px;
}

body {
    background-color: #ebf8fa;
    font-size: 16px;
    font-family: "Helvetica", sans-serif;
    letter-spacing: 0.08px;
}

/***********************
    Header
************************/

header {
    width:  100%;
    height: 75px;
    padding: 20px;
    background-color: #FAFAFA;
}

h1 {
    font-size: 30px;
    color: #3fbfd2;
    text-transform: uppercase;
    float: left;
}

span {
    color: #2c8593
}

#reset-btn {
    -webkit-border-radius: 10;
    -moz-border-radius: 10;
    border-radius: 10px;
    color: #fff;
    font-size: 20px;
    background-color: #2c8593;
    padding: 8px 20px;
    border: none;
    float: right;
}

#reset-btn:hover {
  background-color: #1f5f69;
  text-decoration: none;
}

/***********************
    Wrapper
************************/

.wrapper {
    clear: both;
}

/***********************
    Players 
************************/

h2 {
    text-transform: uppercase;
    font-size: 18px;
    color: #3fbfd2;
}
.players {
    margin-top: 70px;
    margin-left: 20px;
    text-align: center;
}

.player-one {
    float: left;
}

.player-two-bottom {
    display: none;
}
/***********************
    Game Styles
************************/

.game {
    float: left;
}

.top-1, 
.top-2,
.top-3,
.middle-1,
.middle-2,
.middle-3,
.bottom-1,
.bottom-2,
.bottom-3 {
    display: inline-block;
    float: left;
}

.top-1,
.middle-1,
.bottom-1 {
    border-right: 15px solid #3fbfd2;
}

.top-1,
.top-2,
.top-3 {
 border-bottom: 15px solid #3fbfd2;
}

.top-3,
.middle-3,
.bottom-3 {
    border-left: 15px solid #3fbfd2;
}

.bottom-1,
.bottom-2,
.bottom-3 {
    border-top: 15px solid #3fbfd2;
}

.fa-circle-o,
.fa-times {
    color: #2c8593;
}

/*iPhone portrait*/

@media only screen and (min-width: 320px) {
 /*   body {
        color: purple;
    }*/

/***********************
    Header
************************/

    h1 {
        margin-left: 10px;
    }

/***********************
     Players
************************/    

    .players-two-bottom {
        display: none;
    }

/***********************
     Game
************************/ 

    .game {
        width: 300px;
        margin-top: 50px;
        margin-bottom: 30px;
    }

    .wrapper { 
        margin-left: 40px;
    }

    .row-top,
    .row-middle,
    .row-bottom {
        width: 300px;
        height: 100px;
    }

    .top-1, 
    .top-2,
    .top-3,
    .middle-1,
    .middle-2,
    .middle-3,
    .bottom-1,
    .bottom-2,
    .bottom-3 {
        width: 100px;
        height: 100px;
    }

    .fa-circle-o {
        padding-left: 15px;
        margin-top: 10px; 
        font-size: 70px;
    }

    .fa-times {
        margin-left: 7px;
        margin-right: 7px;
        font-size: 90px;
    }
}


/*iPhone landscape*/

@media only screen and (min-width: 480px) {
    body {
        color: green;
    }

    h1 {
    margin-left: 20px;
}


/*ipad potrait*/

@media only screen and (min-width: 768px) {
    body {
        color: red;
    }
       /***********************
     Players
************************/    

    .players {
        display: block;
    }

h2 {
    text-transform: uppercase;
    font-size: 26px;
    color: #2c8593;
}
.players,
.game {
    float: left;
}

.players {
    margin-top: 180px;
    margin-left: 50px;
    width: 200px;
}

.game {
    margin-top: 30px;
    width: 500px;
    height: 500px;
    margin-bottom: 30px;
}

.fa-circle-o {
    color: #2c8593;
    padding-left: 15px;
    font-size: 100px;
}

.fa-times {
    color: #2c8593;
    padding-left: 15px;
    font-size: 100px;
}

.row-top,
.row-middle,
.row-bottom {
    width: 500px;
    height: 166px;
}

.top-1, 
.top-2,
.top-3,
.middle-1,
.middle-2,
.middle-3,
.bottom-1,
.bottom-2,
.bottom-3 {
    width: 166px;
    height: 166px;
    display: inline-block;
    float: left;
}

}


/*ipad lanscape / small laptop*/

@media only screen and (min-width: 1024px) {
    body {
        color: blue;
    }   /***********************
     Players
************************/    

    .players {
        display: block;
    }

h2 {
    text-transform: uppercase;
    font-size: 35px;
    color: #2c8593;
}
.players,
.game {
    float: left;
}

.players {
    margin-top: 180px;
    margin-left: 90px;
    width: 300px;
}

.game {
    margin-top: 30px;
    width: 600px;
    height: 600px;
    margin-bottom: 30px;
}

.fa-circle-o {
    color: #2c8593;
    padding-left: 15px;
    font-size: 180px;
}

.fa-times {
    color: #2c8593;
    padding-left: 15px;
    font-size: 200px;
}

.row-top,
.row-middle,
.row-bottom {
    width: 600px;
    height: 200px;
}

.top-1, 
.top-2,
.top-3,
.middle-1,
.middle-2,
.middle-3,
.bottom-1,
.bottom-2,
.bottom-3 {
    width: 200px;
    height: 200px;
    display: inline-block;
    float: left;
}


 
}

